# datapizza-ai

./: .pre-commit-config.yaml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  examples.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.0.2/API Reference/: index.html
0.0.2/API Reference/Modules/: index.html
0.0.2/API Reference/memory/: index.html
0.0.2/Guides/agent/: index.html
0.0.2/search/: search_index.json
datapizza-ai-cache/redis/: pyproject.toml
datapizza-ai-cache/redis/tests/: test_redis_cache.py
datapizza-ai-clients/datapizza-ai-clients-anthropic/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-anthropic/tests/: test_anthropic_memory_adapter.py
datapizza-ai-clients/datapizza-ai-clients-azure-openai/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-azure-openai/datapizza/clients/azure_openai/: __init__.py  azure_openai_client.py
datapizza-ai-clients/datapizza-ai-clients-google/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-google/tests/: test_memory_adapter.py
datapizza-ai-clients/datapizza-ai-clients-mistral/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-mistral/tests/: test_mistral_client.py
datapizza-ai-clients/datapizza-ai-clients-openai/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai-completion/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai-completion/tests/: test_openai_completion.py
datapizza-ai-clients/datapizza-ai-clients-openai-like/: README.md  pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai-like/tests/: test_openai_completion.py
datapizza-ai-clients/datapizza-ai-clients-openai/datapizza/clients/openai/: __init__.py  memory_adapter.py  openai_client.py
datapizza-ai-clients/datapizza-ai-clients-openai/tests/: test_base_client.py  test_memory_adapter.py
datapizza-ai-core/: README.md  pyproject.toml
datapizza-ai-core/datapizza/agents/: __init__.py  __version__.py  agent.py  client_manager.py  logger.py
datapizza-ai-core/datapizza/agents/tests/: test_base_agents.py
datapizza-ai-core/datapizza/cache/: __init__.py
datapizza-ai-core/datapizza/clients/: __init__.py  factory.py  mock_client.py
datapizza-ai-core/datapizza/clients/tests/: test_client_factory.py
datapizza-ai-core/datapizza/core/: __init__.py  constants.py  models.py  utils.py
datapizza-ai-core/datapizza/core/cache/: __init__.py  cache.py
datapizza-ai-core/datapizza/core/clients/: __init__.py  client.py  response.py
datapizza-ai-core/datapizza/core/clients/tests/: test_mock_client.py
datapizza-ai-core/datapizza/core/embedder/: __init__.py  base.py
datapizza-ai-core/datapizza/core/modules/: captioner.py  metatagger.py  parser.py  prompt.py  reranker.py  rewriter.py  splitter.py
datapizza-ai-core/datapizza/core/vectorstore/: __init__.py  vectorstore.py
datapizza-ai-core/datapizza/embedders/: __init__.py  embedders.py
datapizza-ai-core/datapizza/memory/: __init__.py  memory.py  memory_adapter.py
datapizza-ai-core/datapizza/memory/tests/: test_memory.py
datapizza-ai-core/datapizza/modules/captioners/: __init__.py  llm_captioner.py
datapizza-ai-core/datapizza/modules/metatagger/: __init__.py  keyword_metatagger.py
datapizza-ai-core/datapizza/modules/metatagger/tests/: test_keyword_metagger.py
datapizza-ai-core/datapizza/modules/parsers/: __init__.py  text_parser.py
datapizza-ai-core/datapizza/modules/parsers/tests/: test_base_parser.py
datapizza-ai-core/datapizza/modules/prompt/: __init__.py  image_rag.py  prompt.py
datapizza-ai-core/datapizza/modules/prompt/tests/: test_chat_prompt_template.py
datapizza-ai-core/datapizza/modules/rewriters/: __init__.py  tool_rewriter.py
datapizza-ai-core/datapizza/modules/rewriters/tests/: test_tool_rewriter.py
datapizza-ai-core/datapizza/modules/splitters/: __init__.py  bbox_merger.py  node_splitter.py  pdf_image_splitter.py  recursive_splitter.py  text_splitter.py
datapizza-ai-core/datapizza/modules/splitters/tests/: test_node_splitter.py  test_recursive_splitter.py  test_text_splitter.py
datapizza-ai-core/datapizza/modules/treebuilder/: __init__.py  llm_treebuilder.py
datapizza-ai-core/datapizza/modules/treebuilder/test/: test_llm_treebuilder.py
datapizza-ai-core/datapizza/pipeline/: __init__.py  dag_pipeline.py  functional_pipeline.py  pipeline.py
datapizza-ai-core/datapizza/pipeline/tests/: config.yaml  dag_config.yaml  functional_pipeline_config.yaml  test_functional_pipeline.py  test_graph_pipeline.py  test_pipeline.py
datapizza-ai-core/datapizza/tools/: __init__.py  google.py  tool_converter.py  tools.py  utils.py
datapizza-ai-core/datapizza/tools/tests/: test_tools.py
datapizza-ai-core/datapizza/tracing/: __init__.py  memory_exporter.py  tracing.py
datapizza-ai-core/datapizza/tracing/tests/: test_tracing.py
datapizza-ai-core/datapizza/type/: __init__.py  type.py
datapizza-ai-core/datapizza/type/tests/: test_type.py
datapizza-ai-embedders/: image_embedder.py
datapizza-ai-embedders/cohere/: pyproject.toml
datapizza-ai-embedders/fastembedder/: pyproject.toml
datapizza-ai-embedders/google/: README.md  pyproject.toml
datapizza-ai-embedders/openai/: README.md  pyproject.toml
datapizza-ai-eval/: metrics.py
datapizza-ai-modules/parsers/docling/: pyproject.toml
datapizza-ai-modules/parsers/docling/datapizza/modules/parsers/docling/: __init__.py  docling_parser.py  utils.py
datapizza-ai-modules/rerankers/together/: pyproject.toml
datapizza-ai-modules/rerankers/together/datapizza/modules/rerankers/together/: __init__.py  together_reranker.py
datapizza-ai-tools/SQLDatabase/: README.md  pyproject.toml
datapizza-ai-tools/duckduckgo/: pyproject.toml
datapizza-ai-tools/filesystem/: README.md  pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-qdrant/: README.md  pyproject.toml
docs/: .pages  index.md
docs/API Reference/: .pages  index.md  memory.md
docs/API Reference/Agents/: agent.md
docs/Guides/: .pages  agent.md
(+203 files in other folders)
