# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "datapizza-ai-core"
version = "0.0.4"
description = "Core components for the datapizza-ai framework"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.10.0,<3.14" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opentelemetry-api>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "pydantic>=2.10.5,<3.0.0",
    "python-dotenv==1.0.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "jsonref>=1.1.0",
    "jinja2>=3.1.6",
]

# Development dependencies
[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "pytest",
    "ruff>=0.11.5",
]

# Hatch build configuration
[tool.hatch.build.targets.sdist]
include = ["datapizza"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["datapizza"]
exclude = ["**/BUILD"]

# Ruff configuration
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "C4",  # flake8-comprehensions
]
